# Magnetar

./: .gitignore  CMakeLists.txt  LICENSE.md  THIRD-PARTY-LICENSES.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glfw-3.3/: CMakeCache.txt  cmake_install.cmake  cmake_uninstall.cmake
libs/glfw-3.3/src/: cmake_install.cmake
libs/glfw-3.3/tests/: clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  vulkan  windows
libs/imgui/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
shaders/: vertex.glsl
src/: application.h  log.cpp  magnetar.h  magnetar_pch.h  main.cpp  shader.cpp  texture.cpp  texture.h
src/magnetar/: application.cpp  application.h  entry_point.h  log.cpp  log.h
src/renderer/: shader.h
src/util/: profiler.cpp  profiler.h
